-----------------------------------------------------------------------------------------
	$Id: ChangeLog,v 1.696 2010-01-14 16:47:35 guru Exp $
-----------------------------------------------------------------------------------------

-----------------------------------------------------------------------------------------
2010-01-15	pwessel
	* GMT 4.5.2 finalized and released
-----------------------------------------------------------------------------------------

2010-01-14	pwessel
	* gmt_init.c:		Added an #ifdef CYGWIN_LOCALE_TROUBLE so that Cygwin users who
				experience locale issues can compile with -DCYGWIN_LOCALE_TROUBLE
				until we have a better solution.  This can be set by adding the
				--enable-cygloc option when running configure.
2010-01-13	pwessel
	* gmt_init.c:		The .gmtdefaults4 file was assumed to be in UNIX EOL format.
				Now we strip off EOL before checking for blank lines etc.
	* *.c:			Made sure chopping was done consistently in other codes.

2010-01-13	remko
	* psscale.c:		psscale -Bg now correctly produces gridlines using GRID_PEN_PRIMARY.

2010-01-13	jluis
	* gmtdefaults.c:	Replaced free(..) with GMT_free (..) so Win version doesn't crash

2010-01-12	remko
	* job18.*, job24.*:	psxy -Se|E now correctly uses major/minor axis (as in documentation)
				instead of semimajor/minor axis. This required changes in the scripts.
	* clip_ellipse.sh:	---"---
	* example_01.eps:	Local minima and maxima now appear correctly in this example. Was wrong
				at least since 4.2.0.

2010-01-11	pwessel
	* grd2xyz.c:		Added -N<value> to replace NaNs on output and to match xyz2grd options.
	* gmt_support.c:	GMT_inonout_sphpol_count could count a tangent touch as a crossing if
				the tangent point was a node point.

2010-01-10	pwessel
	* gmt_init.c:		The .gmtcommands4 file was assumed to be in UNIX EOL format.
				Now we strop off EOL before checking for blank lines etc.

2010-01-09	pwessel