@@ -23,6 +23,11 @@ to issue more 4.5.? releases (to fix bugs only) until a stable
 GMT 5 is announced.  We expect to release a beta version of GMT
 5 later this spring.
 
+As of this notice, all but the Japan, Vienna and S Africa mirror
+ftp servers are now synced up; we hope those two will follow
+within 24 hours.
+
+
 Sincerely,
 
 The GMT Team
